[package]
name = "rustamol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dev time
bevy = { version = "0.6.0", features = ["dynamic"] }
# bevy = { path = "/home/speak/git/bevy", features = ["dynamic"] }

# Release time
# bevy = 0.6



lazy_static = "1.4.0"
